# stoei

./: .cursorrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
demo/: add_captions.py  demo.tape  filtering.tape  install.tape  jobs.tape  nodes.tape  priority.tape  record.sh  setup.tape  users.tape
docs/: architecture.md
docs/plans/: 2026-02-11-feat-user-node-mapping-plan.md  2026-02-15-refactor-async-data-fetching-plan.md  2026-02-24-fix-deduplicate-refresh-failure-notifications-plan.md  2026-02-24-refactor-incremental-datatable-refresh-plan.md  2026-02-25-feat-intuitive-priority-interface.md  2026-03-01-feat-exclude-draining-nodes-from-cluster-stats-plan.md  2026-03-02-feat-job-array-count-overview-plan.md  2026-03-02-fix-unique-node-count-display-plan.md  2026-03-22-fix-new-jobs-not-visible-after-submission-plan.md  2026-03-24-feat-set-terminal-title-to-stoei-plan.md
scripts/: release.py  run_with_mocks.sh  stoei-dev
stoei/: __init__.py  __main__.py  app.py  colors.py  editor.py  keybindings.py  logger.py  logging.py  settings.py  themes.py
stoei/data/: __init__.py  tdp_values.json
stoei/slurm/: __init__.py  array_parser.py  cache.py  commands.py  energy.py  formatters.py  gpu_parser.py  nodelist.py  parser.py  resilience.py  validation.py  wait_time.py
stoei/styles/: __init__.py  app.tcss  modals.tcss  theme.py
stoei/widgets/: __init__.py  cluster_sidebar.py  filterable_table.py  help_screen.py  job_stats.py  (+10 more)
tests/: __init__.py  conftest.py  test_app.py  test_app_cluster.py  test_css_validation.py  test_editor.py  test_integration_cluster.py  test_logging.py  test_main.py
todos/: 001-complete-p1-cached-cluster-stats-race-condition.md  001-pending-p1-cached-cluster-stats-race-condition.md  002-complete-p2-nested-threadpoolexecutor-in-fetch-priority.md  002-pending-p2-nested-threadpoolexecutor-in-fetch-priority.md  003-complete-p2-redundant-calculate-cluster-stats-calls.md  003-pending-p2-redundant-calculate-cluster-stats-calls.md  004-complete-p2-apply-fetch-result-type-safety.md  004-pending-p2-apply-fetch-result-type-safety.md  005-complete-p2-missing-unit-tests-new-methods.md  005-pending-p2-missing-unit-tests-new-methods.md  006-complete-p3-lambda-default-arg-capture.md  006-pending-p3-lambda-default-arg-capture.md  007-complete-p3-silent-unknown-label-in-apply-fetch-result.md  007-pending-p3-silent-unknown-label-in-apply-fetch-result.md  008-complete-p3-inconsistent-logging-levels.md  008-pending-p3-inconsistent-logging-levels.md  009-complete-p3-redundant-double-guard-on-refresh-complete.md  009-pending-p3-redundant-double-guard-on-refresh-complete.md
(+61 files in other folders)
