[project]
name = "stoei"
version = "0.2.4"
description = "A TUI app for monitoring SLURM jobs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Philip Hartout", email = "philip.hartout@protonmail.com" }]
keywords = ["slurm", "tui", "hpc", "jobs", "monitor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "textual>=0.89.1",
    "loguru>=0.7.2",
]

[project.urls]
Homepage = "https://github.com/pjhartout/stoei"
Repository = "https://github.com/pjhartout/stoei"
Issues = "https://github.com/pjhartout/stoei/issues"

[project.scripts]
stoei = "stoei.__main__:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.2",
    "ty>=0.0.1a6",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stoei"]

[tool.hatch.build.targets.wheel.sources]
"stoei" = "stoei"

[tool.hatch.build]
include = [
    "stoei/**/*.py",
    "stoei/**/*.tcss",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["stoei", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "N",      # pep8-naming
    "D",      # pydocstyle
    "RUF",    # Ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "PL",     # Pylint
    "TRY",    # tryceratops
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D102", "S101", "PLC0415", "PLR2004", "ARG002"]  # Allow missing docstrings, assert, local imports, magic values, and unused args in tests

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ty.environment]
python-version = "3.11"

[tool.coverage.run]
source = ["stoei"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
